Fixed some layout issues with the winnings table.

--- a/app/stats/numbers/numbers.module.css
+++ b/app/stats/numbers/numbers.module.css
@@ -2,7 +2,6 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    padding: 5px;
 
     h1 {
         font-size: 1.3rem;
